# sentinelai-splunk

./: .env.vultr  .gitattributes  .gitignore  BUILD_PLAN.md  DEVELOPMENT_TRACKER.md  ENTERPRISE_TRACKER.md  LICENSE  README.md  SEED_MANIFEST.md  SPRINT_TRACKER.md  TRACEABILITY.md  architecture_diagram.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  _probe_detections.py  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b1f2c3d4e5a6_tenant_saas_fields.py  c2d3e4f5a6b7_tenant_credentials.py  cace9457d0b0_initial_schema.py  d3e4f5a6b7c8_usage_events.py
backend/app/: main.py
backend/app/agents/: detection_agent.py  orchestrator.py  response_agent.py  triage_agent.py
backend/app/api/: admin_routes.py  deps.py  provider_routes.py  routes.py  schemas.py  tenant_routes.py
backend/app/core/: config.py  crypto.py  metrics.py  middleware.py  principal.py  rbac.py  resilience.py  security.py
backend/app/db/: bootstrap.py  models.py  repositories.py  session.py
backend/app/models/: domain.py
backend/app/services/: ai_factory.py  ai_model.py  audit.py  correlation.py  credentials.py  enrichment.py  executor.py  hosted_models.py  metering.py  notifications.py  quotas.py  workflow.py
backend/app/splunk/: client.py  factory.py  live_client.py  mcp_client.py  mock_client.py
backend/tests/: conftest.py  test_detection_quality.py
backend/tests/integration/: test_admin_rules_audit.py  test_auth_rbac.py  test_investigations.py  test_provider.py  test_quotas_enforcement.py  (+2 more)
(+54 files in other folders)
